# battlesnake

./: .gitignore  Cargo.toml  battlesnake.go  battlesnake_test.go  go.mod  logic.py  main.go  main.py  movement.py  server.py  simulation.go  simulation.py  simulation_test.go  tests.py
movement/: avoidance.py  directions.py  logic.py  targeting.py
src/: board.rs  coord.rs  engine.rs  game_state.rs  logic.rs  main.rs  server.rs  snake.rs
tests/: test_movement.py  test_simulation.py
