[package]
name = "battlesnake"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.4.10", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]